force-app/main/default/objects/Ticket_Order_Item__c/Ticket_Order_Item__c.object-meta.xml
<CustomObject>
    <label>Ticket Order Item</label>
    <nameField>
        <displayFormat>TOI-{000000}</displayFormat>
        <label>Ticket Order Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ticket Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>