force-app/main/default/objects/Ticket_Order_Item__c/fields/Ticket_Order__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Order__c</fullName>
    <label>Ticket Order</label>
    <referenceTo>Ticket_Order__c</referenceTo>
    <relationshipLabel>Ticket Order Items</relationshipLabel>
    <relationshipName>Ticket_Order_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>