force-app/main/default/objects/Ticket_Order_Item__c/fields/Ticketed_Event__c.field-meta.xml
<CustomField>
    <fullName>Ticketed_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ticketed Event</label>
    <referenceTo>Ticketed_Event__c</referenceTo>
    <relationshipLabel>Ticket Order Items</relationshipLabel>
    <relationshipName>Ticket_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>