force-app/main/default/objects/Ticket_Order_Item__c/fields/Venue_Name__c.field-meta.xml
<CustomField>
    <fullName>Venue_Name__c</fullName>
    <formula>Ticketed_Event__r.Venue__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Venue Name</label>
    <type>Text</type>
</CustomField>